--- a/32PyTorch_SimpleRNN_Sine.ipynb
+++ b/32PyTorch_SimpleRNN_Sine.ipynb
@@ -6,7 +6,7 @@
       "name": "32PyTorch SimpleRNN Sine.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/Wm69gsjLWXMHBA3Z+L3G",
+      "authorship_tag": "ABX9TyMI1Y4EVD3lN4zygvbfYcGX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -30,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "y3VWGIZ9PmZB"
       },
@@ -55,9 +56,9 @@
           "height": 265
         },
         "id": "JyH5NEGnP7q-",
-        "outputId": "654dc520-3335-4b51-ad2b-4a7951a5b516"
+        "outputId": "2660a10d-01a6-4648-eadd-3dbb42a756b6"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -89,7 +90,7 @@
       "metadata": {
         "id": "6eFN930tQDbN"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -103,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J8nb_mnyXjW8",
-        "outputId": "aa2fb309-e900-443e-f876-cf4c8d7a681e"
+        "outputId": "a91dd6fe-2e41-4aff-c644-d2197b731dec"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +169,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 5
         }
       ]
     },
@@ -183,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHP3j7aVaB2Z",
-        "outputId": "f3c491e4-efb5-433d-b35a-8c94c35a8379"
+        "outputId": "c61f921b-db64-4644-ff0d-8143815c3506"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +200,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -207,30 +208,90 @@
       "cell_type": "code",
       "source": [
         "class RNN(nn.Module):\n",
-        "    def __init__(self, batch_size, time_step, input_feature, num_layers, hidden_features, out_feature):\n",
-        "        super.__init__(RNN, self).__init__()\n",
-        "        self.batch_size = N\n",
-        "        self.time_step = T\n",
-        "        self.input_features = D\n",
-        "        self.num_layers = L\n",
-        "        self.hidden_features = M\n",
-        "        self.out_feature = K\n",
+        "    def __init__(self, input_feature, num_layers, hidden_features, out_feature):\n",
+        "        super(RNN, self).__init__()\n",
+        "        # self.batch_size = N\n",
+        "        # self.time_step = T\n",
+        "        self.D = input_feature\n",
+        "        self.L = num_layers\n",
+        "        self. M = hidden_features\n",
+        "        self.K = out_feature\n",
         "\n",
         "        self.rnn = nn.RNN(\n",
         "            input_size = self.D,\n",
         "            hidden_size = self.M,\n",
         "            num_layers = self.L,\n",
-        "            non_linearity = 'relu',\n",
+        "            nonlinearity = 'relu',\n",
         "            batch_first = True\n",
         "        )\n",
         "\n",
         "        self.fc = nn.Linear(self.M, self.K)\n",
         "\n",
         "    def forward(self, X):\n",
-        "        \n"
+        "        h0 = torch.zeros(self.L, x.size(0), self.M)\n",
+        "        out, _ = self.rnn(X, h0)\n",
+        "        out = self.fc(out[:, -1, :])\n",
+        "        return out"
       ],
       "metadata": {
         "id": "URMsMbjRgYNN"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = RNN(input_feature = 1,\n",
+        "            num_layers = 2,\n",
+        "            hidden_features = 5,\n",
+        "            out_feature = 1\n",
+        "            )"
+      ],
+      "metadata": {
+        "id": "1VFcjBOZjfx2"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "model.to(device)\n",
+        "# print(device)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wihTJ-HxjVdw",
+        "outputId": "f1ef1e17-522f-4837-e633-b774f6a4434d"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RNN(\n",
+              "  (rnn): RNN(1, 5, num_layers=2, batch_first=True)\n",
+              "  (fc): Linear(in_features=5, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Wex99JeFlhTu"
       },
       "execution_count": null,
       "outputs": []
