--- a/32PyTorch_SimpleRNN_Sine.ipynb
+++ b/32PyTorch_SimpleRNN_Sine.ipynb
@@ -6,7 +6,7 @@
       "name": "32PyTorch SimpleRNN Sine.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMI1Y4EVD3lN4zygvbfYcGX",
+      "authorship_tag": "ABX9TyP1Fg5SJTV/UIIFMLWuDpYy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "y3VWGIZ9PmZB"
       },
@@ -56,9 +56,9 @@
           "height": 265
         },
         "id": "JyH5NEGnP7q-",
-        "outputId": "2660a10d-01a6-4648-eadd-3dbb42a756b6"
+        "outputId": "630a9d00-88be-42b0-9df7-646c62e64d70"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "6eFN930tQDbN"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J8nb_mnyXjW8",
-        "outputId": "a91dd6fe-2e41-4aff-c644-d2197b731dec"
+        "outputId": "a31be10b-86de-43e6-803d-097793e48834"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +169,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -184,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHP3j7aVaB2Z",
-        "outputId": "c61f921b-db64-4644-ff0d-8143815c3506"
+        "outputId": "0d13afd5-02f3-4d22-af1e-6210ebba6f63"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "URMsMbjRgYNN"
       },
-      "execution_count": 20,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "1VFcjBOZjfx2"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -266,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wihTJ-HxjVdw",
-        "outputId": "f1ef1e17-522f-4837-e633-b774f6a4434d"
+        "outputId": "d4b21015-4ec4-41cc-adf8-011974986f8f"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +281,87 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer = torch.optim.Adam(model.parameters())\n",
+        "criterion = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "Wex99JeFlhTu"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train = torch.from_numpy(X[:N//2].astype(np.float32))\n",
+        "X_test = torch.from_numpy(X[N//2:].astype(np.float32))\n",
+        "Y_train = torch.from_numpy(Y[:N//2].astype(np.float32))\n",
+        "Y_test = torch.from_numpy(Y[N//2:].astype(np.float32))"
+      ],
+      "metadata": {
+        "id": "DVWaq3flyXod"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def traning(epochs, X_train, X_test, Y_train, Y_test, criterion, optimizer, device, model):\n",
+        "    train_losses = np.zeros(epochs)\n",
+        "    test_losses = np.zeros(epochs)\n",
+        "    for i in range(epochs):\n",
+        "        optimizer.zero_grad()\n",
+        "        output = model(X_train)\n",
+        "        loss = criterion(output, Y_train)\n",
+        "        train_losses[i] = loss.item()\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        \n",
+        "        \n",
+        "        output = model(X_test)\n",
+        "        loss = criterion(output, Y_test)\n",
+        "        train_losses[i] = loss.item()\n",
+        "\n",
+        "        if i%5 == 0:\n",
+        "            print(f'Train Loss: {train_losses}, Test Loss: {test_loss}')\n",
+        "    return train_losses, test_losses"
+      ],
+      "metadata": {
+        "id": "nf1coD8kzMTD"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_losses, test_losses = traning(epochs=1, X_train, X_test, Y_train, Y_test, criterion, optimizer, device, model)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "0fxLRhzE5OB0",
+        "outputId": "bf5d2a88-1531-43fa-d755-628560e4ca5b"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-6252097c7cf9>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    train_losses, test_losses = traning(epochs=1, X_train, X_test, Y_train, Y_test, criterion, optimizer, device, model)\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+          ]
         }
       ]
     },
@@ -291,7 +371,7 @@
         ""
       ],
       "metadata": {
-        "id": "Wex99JeFlhTu"
+        "id": "cOjBmBh45Wfg"
       },
       "execution_count": null,
       "outputs": []
